2010-06-26  Robert Hogan  <robert@webkit.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] DRT Support for setCustomPolicyDelegate

        https://bugs.webkit.org/show_bug.cgi?id=39564

        Unskips:

        LayoutTests/fast/loader/policy-delegate-action-hit-test-zoomed.html
        LayoutTests/fast/loader/onload-policy-ignore-for-frame.html
        LayoutTests/fast/loader/reload-policy-delegate.html
        LayoutTests/fast/loader/javascript-url-hierarchical-execution.html
        LayoutTests/http/tests/misc/policy-delegate-called-twice.html

        * platform/qt/Skipped:

2010-06-26  Mikhail Naganov  <mnaganov@chromium.org>

        Unreviewed text expectations update.

        * platform/chromium-linux/svg/W3C-SVG-1.1/struct-use-01-t-expected.txt: Added.
        * platform/chromium/test_expectations.txt:

2010-06-25  Zhenyao Mo  <zmo@google.com>

        Reviewed by Dimitri Glazkov.

        activeTexture wrongly generates error with legal input.
        https://bugs.webkit.org/show_bug.cgi?id=41227

        * fast/canvas/webgl/texture-active-bind-expected.txt: Added.
        * fast/canvas/webgl/texture-active-bind.html: Added.

2010-06-25  Alpha Lam  <hclam@chromium.org>

        Unreviewed. Build fix.

        Build fix for r61908. Updating test expectations.

        * platform/chromium-linux/css1/basic/containment-expected.checksum:
        * platform/chromium-linux/css1/basic/containment-expected.png:
        * platform/chromium-linux/css1/box_properties/padding_right-expected.checksum:
        * platform/chromium-linux/css1/box_properties/padding_right-expected.png:
        * platform/chromium-linux/css1/font_properties/font_size-expected.checksum:
        * platform/chromium-linux/css1/font_properties/font_size-expected.png:
        * platform/chromium-linux/editing/selection/5354455-1-expected.checksum:
        * platform/chromium-linux/editing/selection/5354455-1-expected.png: