@@ -3,8 +3,8 @@ This test checks that line numbers are correctly reported for both inline script
 On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE".
 
 
-PASS 10 is 10
-PASS 13 is 13
+PASS 16 is 16
+PASS 19 is 19
 PASS successfullyParsed is true
 
 TEST COMPLETE
