@@ -7,12 +7,18 @@
 <body>
 <p id="description"></p>
 <div id="console"></div>
-<script src="resources/script-line-number.js" onload="try { nonExistentFunctionOnLine10(); } catch (e) { assertErrorOnLine(e, 10); }"></script>
+
+<!-- Ensure that lines in a document.write() do not count. -->
+<script>
+document.write("\n\n\n");
+</script>
+
+<script src="resources/script-line-number.js" onload="try { nonExistentFunctionOnLine16(); } catch (e) { assertErrorOnLine(e, 16); }"></script>
 <script>
 try {
-    nonExistentFunctionOnLine13();
+    nonExistentFunctionOnLine19();
 } catch (e) {
-    assertErrorOnLine(e, 13);
+    assertErrorOnLine(e, 19);
 }
 </script>
 <script src="resources/js-test-post.js"></script>
