@@ -1,7 +1,7 @@
 CONSOLE MESSAGE: line 1: SyntaxError: Parse error
 CONSOLE MESSAGE: line 1: SyntaxError: Parse error
-CONSOLE MESSAGE: line 3: PASS
-CONSOLE MESSAGE: line 3: FOO<span>BAR</span>BAZ
+CONSOLE MESSAGE: line 2: PASS
+CONSOLE MESSAGE: line 2: FOO<span>BAR</span>BAZ
 resources/tests1.dat:
 25
 29
